@@ -176,6 +176,12 @@ DEPENDENCIES
     Class::Utils, Error::Pure, List::MoreUtils, Readonly, Unicode::UTF8.
 
 SEE ALSO
+    angle2zodiac
+        Script to convert angle to zodiac string.
+
+    App::Angle2Zodiac
+        Base class for angle2zodiac script.
+
     Zodiac::Angle::SwissEph
         Class for zodiac_angle manipulation based on SwissEph.
 
