@@ -1,4 +1,5 @@
 0.05
+ - Add angle2zodiac to SEE ALSO section in doc.
 
 0.04 2020-10-20T11:33:17+02:00
  - Add test for error in angle2zodiac().
